// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tag ui default: Component: Tag => ui => default 1`] = `
<span
  className="tag"
>
  <span
    className="token"
  >
    Maarten
  </span>
</span>
`;

exports[`Component: Tag ui with close: Component: Tag => ui => with close 1`] = `
<span
  className="tag"
>
  <span
    className="token token-removeable"
  >
    Maarten
    <span
      className="close-button"
      onClick={[Function]}
      role="button"
    >
      ×
    </span>
  </span>
</span>
`;

exports[`Component: Tag ui with type: Component: Tag => ui => with type 1`] = `
<span
  className="tag"
>
  <span
    className="token token-success"
  >
    Maarten
  </span>
</span>
`;
